# verity-engine

./: Cargo.toml  README.md  SUBMISSION_SPEC.md
crates/verity-finality/: Cargo.toml
crates/verity-finality/src/: lib.rs
crates/verity-kernel/src/: error.rs  time.rs
crates/verity-ledgers/: Cargo.toml
crates/verity-ledgers/src/: evidence_ledger.rs  lib.rs  money_ledger.rs
crates/verity-tests/: Cargo.toml
crates/verity-tests/src/: lib.rs
crates/verity-tests/tests/: integration_test.rs  property_tests.rs
