[package]
name = "verity-ledgers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Append-only ledgers for the Verity truth engine"

[dependencies]
verity-kernel = { path = "../verity-kernel" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
